added new paper - nature food - to publication list

--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,11 @@
 		
 		<h2>Publications</h2>
 
+			<p><a href="https://www.nature.com/articles/s43016-025-01130-1"><b>Socio-economic factors constrain climate change adaptation in a tropical export crop</b></a>
+			<br>
+			<psub><b>Varma, V.</b>, Mosedale, J.R., Guzmán Alvarez, J.A. and Bebber, D.P. (2025). Socio-economic factors constrain climate change adaptation in a tropical export crop. <i>Nature Food</i>. doi: 10.1038/s43016-025-01130-1</psub>
+			</p>
+
 			<p><a href="https://www.biorxiv.org/content/10.1101/2024.10.11.617771v1"><b>Quantifying relative sponginess: a high-resolution model of landscape water retention as an ecosystem service</b></a>
 			<br>
 			<psub>Evans, P.M., Dussaillant, A., <b>Varma, V.</b>, Redhead, J.W., Pywell, R.F., Storkey, J., Mead, A. and Bullock, J.M. (2024). Quantifying relative sponginess: a high-resolution model of landscape water retention as an ecosystem service. <i>bioRxiv (preprint)</i>. doi: 10.1101/2024.10.11.617771</psub>
