added journal of wildland fire publication details

--- a/publications.html
+++ b/publications.html
@@ -22,7 +22,12 @@
 		
 		
 		<h2>Publications</h2>
-
+			
+			<p><a href="https://www.publish.csiro.au/WF/WF24174"><b>Decadal scale fire dynamics in savannas and forests of the Nilgiri Biosphere Reserve, India</b></a>
+			<br>
+			<psub>Rajashekar, P., Krishnan, A., <b>Varma, V.</b>, Ratnam, J., Sankaran, M. and Lehmann C.E.R. (2025). Decadal scale fire dynamics in savannas and forests of the Nilgiri Biosphere Reserve, India. <i>International Journal of Wildland Fire</i>. doi: 10.1071/WF24174</psub>
+			</p>
+			
 			<p><a href="https://www.nature.com/articles/s43016-025-01130-1"><b>Socio-economic factors constrain climate change adaptation in a tropical export crop</b></a>
 			<br>
 			<psub><b>Varma, V.</b>, Mosedale, J.R., Guzmán Alvarez, J.A. and Bebber, D.P. (2025). Socio-economic factors constrain climate change adaptation in a tropical export crop. <i>Nature Food</i>. doi: 10.1038/s43016-025-01130-1</psub>
