linkedin added to contact

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,8 @@
 		<p style = "text-align: center"><b>Dr. Varun Varma</b><br>Ecosystems Services Modeller<br>Net Zero and Resilient Farming<br>Rothamsted Research<br>Harpenden, AL5 2JQ, UK.<br>Email: varun.varma@rothamsted.ac.uk<p>
 		
 		<br>
+		
+		<a href="https://www.linkedin.com/in/varun-varma-86aa95262"><img src="./images/linkedin-logo/linkedin-logo/LI-Logo.png" width=150px class="logocenter"></a>
 		<hr>
 		<br>
 	
