added global tipping ponints conference 2025 talk title

--- a/publications.html
+++ b/publications.html
@@ -149,6 +149,12 @@
 		
 		<h2>Conferences and Seminars</h2>
 		
+		<p><b>Rapid assessment of landscape resilience loss: Detecting changes using temporal trends in spatial autocorrelation</b>
+		<br>
+		<psub><b>Varma, V.</b>, Bourhis, Y., Harris, P. and Willcock, S. (2025) <i>Global Tipping Points Conference, University of Exeter, Exeter.</i></psub>
+		</p>
+
+		
 		<p><b>A new approach to associating ecosystem service delivery to land and farm system archetypes</b>
 		<br>
 		<psub><b>Varma, V.</b>, Evans, P.M., Bullock, J.M. and Mead, A. (2023) <i>Landscape Decisions Programme Conference, Royal Society, London.</i></psub>
